<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:weightSum="1">
    <LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
        <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center_horizontal" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/EditFolder"></TextView>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:id="@+id/linearLayout3" android:layout_width="match_parent" android:layout_height="61dp">
            <TextView android:id="@+id/textView2" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/Name"></TextView>
            <EditText android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="266dp" android:id="@+id/editText1">
                <requestFocus></requestFocus>
            </EditText>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout4" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="0.05">
        <TextView android:id="@+id/textView3" android:text="Color: " android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="0.67" android:id="@+id/editText2"></EditText>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout6" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:id="@+id/linearLayout7" android:layout_width="match_parent" android:layout_height="62dp">
            <LinearLayout android:id="@+id/linearLayout8" android:layout_height="match_parent" android:layout_width="wrap_content"></LinearLayout>
            <LinearLayout android:id="@+id/linearLayout9" android:layout_height="match_parent" android:layout_width="wrap_content">
                <TextView android:id="@+id/textView5" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/Priority"></TextView>
            </LinearLayout>
            <CheckBox android:id="@+id/checkBox1" android:text="@string/HighPriority" android:layout_height="wrap_content" android:layout_width="wrap_content"></CheckBox>
            <CheckBox android:id="@+id/checkBox2" android:text="@string/MedPriority" android:layout_height="wrap_content" android:layout_width="wrap_content"></CheckBox>
            <CheckBox android:id="@+id/checkBox3" android:text="@string/LowPriority" android:layout_height="wrap_content" android:layout_width="wrap_content"></CheckBox>
        </LinearLayout>
    </LinearLayout>
    
</LinearLayout>
